<?xml version="1.0"?>
<package format="2">
  <name>master_msgs_iele3338</name>
  <version>0.0.0</version>
  <description>The package that contains messages for the IELE338 Robotic course for 20191 at Universidad de los Andes</description>
  <maintainer email="quintero.carlos@uniandes.edu.co">Carlos Quintero</maintainer>
  <maintainer email="oa.diaz10@uniandes.edu.co">Óscar Díaz</maintainer>
  <maintainer email="js.moral@uniandes.edu.co">Jorge Mora</maintainer>

  <license>GVLP3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>

  <export>

  </export>
</package>
